--- a/main/templates/dashboard/sidebar.html
+++ b/main/templates/dashboard/sidebar.html
@@ -9,7 +9,7 @@
 		<i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
 		<a class="navbar-brand m-0" href="https://demos.creative-tim.com/soft-ui-dashboard/pages/dashboard.html" target="_blank">
 			<img src="{% static '/img/logo-ct.png' %}" class="navbar-brand-img h-100" alt="main_logo">
-			<span class="ms-1 font-weight-bold">Soft UI Dashboard</span>
+			<span class="ms-1 font-weight-bold">Diabetes Prediction</span>
 		</a>
     </div>
     <hr class="horizontal dark mt-0">
