--- a/main/templates/my-profile.html
+++ b/main/templates/my-profile.html
@@ -1,4 +1,5 @@
 {% extends 'dashboard/sidebar.html' %}
+{% load static %}
 
 {% block dashboard_content %}
 
@@ -9,12 +10,12 @@
 				<h5 class="card-title">Edit Profile</h5>
 			</div>
 			<div class="card-body">
-				<form>
+				<form id="my-profile-form">
 					<div class="row">
 						<div class="col-md-6">
 							<div class="form-group">
 								<label for="exampleInputEmail1">Email address</label>
-								<input type="email" class="form-control" placeholder="Email">
+								<input id="email" type="email" class="form-control" placeholder="Email" value="{{ user.email }}">
 							</div>
 						</div>
 					</div>
@@ -22,41 +23,47 @@
 						<div class="col-md-6">
 							<div class="form-group">
 								<label>First Name</label>
-								<input type="text" class="form-control" placeholder="Company" value="Chet">
+								<input id="first-name" type="text" class="form-control" placeholder="Company" value="{{ user.first_name }}">
 							</div>
 						</div>
 						<div class="col-md-6">
 							<div class="form-group">
 								<label>Last Name</label>
-								<input type="text" class="form-control" placeholder="Last Name" value="Faker">
+								<input id="last-name" type="text" class="form-control" placeholder="Last Name" value="{{ user.last_name }}">
 							</div>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-12">
+						<div class="col-md-8">
 							<div class="form-group">
 								<label>Address</label>
-								<input type="text" class="form-control" placeholder="Home Address" value="Melbourne, Australia">
+								<input id="address" type="text" class="form-control" placeholder="Home Address" value="{{ address.address }}">
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="form-group">
+								<label>City</label>
+								<input id="city" type="text" class="form-control" placeholder="City" value="{{ address.city }}">
 							</div>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-4">
 							<div class="form-group">
-								<label>City</label>
-								<input type="text" class="form-control" placeholder="City" value="Melbourne">
+								<label>State</label>
+								<input id="state" type="text" class="form-control" placeholder="State" value="{{ address.state }}">
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="form-group">
 								<label>Country</label>
-								<input type="text" class="form-control" placeholder="Country" value="Australia">
+								<input id="country" type="text" class="form-control" placeholder="Country" value="{{ address.country }}">
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="form-group">
 								<label>Postal Code</label>
-								<input type="number" class="form-control" placeholder="ZIP Code">
+								<input id="zipcode" type="number" class="form-control" placeholder="{{ address.zip_code }}">
 							</div>
 						</div>
 					</div>
@@ -72,3 +79,6 @@
 </div>
 
 {% endblock dashboard_content %}
+{% block js_files %}
+<script src="{% static '/js/main/signup.js' %}"></script>
+{% endblock js_files %}
