--- a/main/templates/dashboard/sidebar.html
+++ b/main/templates/dashboard/sidebar.html
@@ -55,6 +55,7 @@
 					<span class="nav-link-text ms-1">My profile</span>
 				</a>
 			</li>
+			{% if user.is_superuser %}
 			<li class="nav-item">
 				<a class="nav-link {% if request.path == '/users-predictions/' %} active {% endif %}" href="/admin/users-predictions/">
 					<div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
@@ -76,6 +77,7 @@
 					<span class="nav-link-text ms-1">Users</span>
 				</a>
 			</li>
+			{% endif %}
 		</ul>
     </div>
 </aside>
