--- a/main/templates/dashboard/predict.html
+++ b/main/templates/dashboard/predict.html
@@ -6,51 +6,70 @@
 <div class="card">
 	<div class="card-body">
 		<h4>Fill this prediction form</h4>
-		<div class="row">
-			<div class="col-lg-6">
-				<form id="predict-form">
+		<form id="predict-form">
+			<div class="row">
+				<div class="col-lg-6">
 					<label>Name</label>
 					<div class="mb-3">
 						<input type="text" id="name" class="form-control" placeholder="Name" aria-label="Email" aria-describedby="email-addon">
 					</div>
+				</div>
+				<div class="col-lg-6">
 					<label>Pregnancy</label>
 					<div class="mb-3">
 						<input type="number" id="no_of_pregnancies" class="form-control" placeholder="Number of pregnancies" aria-label="number-of-pregnancies" aria-describedby="email-addon">
 					</div>
+				</div>
+				<div class="col-lg-6">
 					<label>Glucose</label>
 					<div class="mb-3">
 						<input type="text" id="glucose" class="form-control" placeholder="Glucose" aria-label="Glucose" aria-describedby="email-addon">
 					</div>
+				</div>
+				<div class="col-lg-6">
 					<label>Blood pressure</label>
 					<div class="mb-3">
 						<input type="text" id="blood_pressure" class="form-control" placeholder="Blood pressure" aria-label="Blood pressure" aria-describedby="email-addon">
 					</div>
+				</div>
+				<div class="col-lg-6">
 					<label>Skin thickness</label>
 					<div class="mb-3">
 						<input type="text" id="skin_thickness" class="form-control" placeholder="Skin thickness" aria-label="Skin thickness" aria-describedby="email-addon">
 					</div>
+				</div>
+				<div class="col-lg-6">
 					<label>Insulin</label>
 					<div class="mb-3">
 						<input type="text" id="insulin" class="form-control" placeholder="Insulin" aria-label="Insulin" aria-describedby="email-addon">
 					</div>
+				</div>
+				<div class="col-lg-6">
 					<label>BMI</label>
 					<div class="mb-3">
 						<input type="text" id="bmi" class="form-control" placeholder="BMI" aria-label="BMI" aria-describedby="email-addon">
 					</div>
+				</div>
+				<div class="col-lg-6">
 					<label>Diabetes pedigree function</label>
 					<div class="mb-3">
 						<input type="text" class="form-control" placeholder="Diabetes pedigree function" aria-label="Diabetes predigree function" aria-describedby="email-addon">
 					</div>
+				</div>
+				<div class="col-lg-6">
 					<label>Age</label>
 					<div class="mb-3">
 						<input type="text" id="age" class="form-control" placeholder="Age" aria-label="Age" aria-describedby="email-addon">
 					</div>
+				</div>
+				<div class="col-lg-6"></div>
+				<div class="col-lg-6">
 					<div class="mb-3">
 						<button type="submit" class="btn btn-primary">Predict</button>
 					</div>
-				</form>
+				</div>
 			</div>
-		</div>
+		</form>
 	</div>
 </div>
 
