--- a/main/templates/my-profile.html
+++ b/main/templates/my-profile.html
@@ -23,7 +23,7 @@
 						<div class="col-md-6">
 							<div class="form-group">
 								<label>First Name</label>
-								<input id="first-name" type="text" class="form-control" placeholder="Company" value="{{ user.first_name }}">
+								<input id="first-name" type="text" class="form-control" placeholder="First name" value="{{ user.first_name }}">
 							</div>
 						</div>
 						<div class="col-md-6">
