--- a/main/templates/admin-dashboard/doctors-contact.html
+++ b/main/templates/admin-dashboard/doctors-contact.html
@@ -1,4 +1,5 @@
 {% extends 'dashboard/sidebar.html' %}
+{% load static %}
 
 {% block dashboard_content %}
 
@@ -44,7 +45,8 @@
 				</td>
 				<td class="align-middle">
 					<a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
-						<button class="btn btn-danger">Delete</button>
+						<input form="delete-form-{{ doctor.id }}" type="hidden" value="{{ doctor.id }}"/>
+						<button class="btn btn-danger" onClick="deleteDoctor({{ doctor.id }})">Delete</button>
 					</a>
 				</td>
 			</tr>
@@ -54,3 +56,6 @@
 </div>
 
 {% endblock dashboard_content %}
+{% block js_files %}
+<script src="{% static '/js/main/doctor.js' %}"></script>
+{% endblock js_files %}
