--- a/main/templates/admin-dashboard/add-diet.html
+++ b/main/templates/admin-dashboard/add-diet.html
@@ -11,7 +11,7 @@
 		</button>
 	</a>
 	<div class="card-body">
-		<h4>{% if '/edit/' in request.path %}Edit{% else %}Add{% endif %} diet blog post</h4>
+		<h4>{% if diet is not None %}Edit{% else %}Add{% endif %} diet blog post</h4>
 		<div class="row">
 			<div class="col-lg-12">
 				<form id="{% if diet is not None %}edit{% else %}add{% endif %}-diet-form">
