--- a/main/templates/dashboard/prediction.html
+++ b/main/templates/dashboard/prediction.html
@@ -7,97 +7,98 @@
 <div class="row">
 	<div class="col-lg-12">
 		<h4>Diabetes detection result</h4>
-		<p class="text-danger">Outcome - Model1 is saying taht you have {{ prediction.model1_prediction }} chances of having diabetes</p>
+		<p class="text-danger">Outcome - Model1 is saying taht you have {{ prediction.model1_prediction }} chances of
+			having diabetes</p>
 	</div>
 </div>
 <div class="row">
 	<div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
-	  <div class="card">
-		<div class="card-body p-3">
-		  <div class="row">
-			<div class="col-8">
-			  <div class="numbers">
-				<p class="text-sm mb-0 text-capitalize font-weight-bold">Model1</p>
-				<h5 class="font-weight-bolder mb-0">
-				  0
-				  <span class="text-success text-sm font-weight-bolder">+55%</span>
-				</h5>
-			  </div>
+		<div class="card">
+			<div class="card-body p-3">
+				<div class="row">
+					<div class="col-8">
+						<div class="numbers">
+							<p class="text-sm mb-0 text-capitalize font-weight-bold">Model1</p>
+							<h5 class="font-weight-bolder mb-0">
+								0
+								<span class="text-success text-sm font-weight-bolder">+55%</span>
+							</h5>
+						</div>
+					</div>
+					<div class="col-4 text-end">
+						<div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+							<i class="ni ni-money-coins text-lg opacity-10" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="col-4 text-end">
-			  <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-				<i class="ni ni-money-coins text-lg opacity-10" aria-hidden="true"></i>
-			  </div>
-			</div>
-		  </div>
 		</div>
-	  </div>
 	</div>
 	<div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
-	  <div class="card">
-		<div class="card-body p-3">
-		  <div class="row">
-			<div class="col-8">
-			  <div class="numbers">
-				<p class="text-sm mb-0 text-capitalize font-weight-bold">Model2</p>
-				<h5 class="font-weight-bolder mb-0">
-				  0
-				  <span class="text-success text-sm font-weight-bolder">+3%</span>
-				</h5>
-			  </div>
+		<div class="card">
+			<div class="card-body p-3">
+				<div class="row">
+					<div class="col-8">
+						<div class="numbers">
+							<p class="text-sm mb-0 text-capitalize font-weight-bold">Model2</p>
+							<h5 class="font-weight-bolder mb-0">
+								0
+								<span class="text-success text-sm font-weight-bolder">+3%</span>
+							</h5>
+						</div>
+					</div>
+					<div class="col-4 text-end">
+						<div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+							<i class="ni ni-world text-lg opacity-10" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="col-4 text-end">
-			  <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-				<i class="ni ni-world text-lg opacity-10" aria-hidden="true"></i>
-			  </div>
-			</div>
-		  </div>
 		</div>
-	  </div>
 	</div>
 	<div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
-	  <div class="card">
-		<div class="card-body p-3">
-		  <div class="row">
-			<div class="col-8">
-			  <div class="numbers">
-				<p class="text-sm mb-0 text-capitalize font-weight-bold">Model3</p>
-				<h5 class="font-weight-bolder mb-0">
-				  0
-				  <span class="text-danger text-sm font-weight-bolder">-2%</span>
-				</h5>
-			  </div>
+		<div class="card">
+			<div class="card-body p-3">
+				<div class="row">
+					<div class="col-8">
+						<div class="numbers">
+							<p class="text-sm mb-0 text-capitalize font-weight-bold">Model3</p>
+							<h5 class="font-weight-bolder mb-0">
+								0
+								<span class="text-danger text-sm font-weight-bolder">-2%</span>
+							</h5>
+						</div>
+					</div>
+					<div class="col-4 text-end">
+						<div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+							<i class="ni ni-paper-diploma text-lg opacity-10" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="col-4 text-end">
-			  <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-				<i class="ni ni-paper-diploma text-lg opacity-10" aria-hidden="true"></i>
-			  </div>
-			</div>
-		  </div>
 		</div>
-	  </div>
 	</div>
 	<div class="col-xl-3 col-sm-6">
-	  <div class="card">
-		<div class="card-body p-3">
-		  <div class="row">
-			<div class="col-8">
-			  <div class="numbers">
-				<p class="text-sm mb-0 text-capitalize font-weight-bold">Model4</p>
-				<h5 class="font-weight-bolder mb-0">
-				  0
-				  <span class="text-success text-sm font-weight-bolder">+5%</span>
-				</h5>
-			  </div>
+		<div class="card">
+			<div class="card-body p-3">
+				<div class="row">
+					<div class="col-8">
+						<div class="numbers">
+							<p class="text-sm mb-0 text-capitalize font-weight-bold">Model4</p>
+							<h5 class="font-weight-bolder mb-0">
+								0
+								<span class="text-success text-sm font-weight-bolder">+5%</span>
+							</h5>
+						</div>
+					</div>
+					<div class="col-4 text-end">
+						<div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+							<i class="ni ni-cart text-lg opacity-10" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="col-4 text-end">
-			  <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-				<i class="ni ni-cart text-lg opacity-10" aria-hidden="true"></i>
-			  </div>
-			</div>
-		  </div>
 		</div>
-	  </div>
 	</div>
 </div>
 <div class="row mt-5">
@@ -112,7 +113,7 @@
 			<h5>Your inputs</h5>
 			<p>
 				<span>No. of pregnancies:&nbsp;</span>
-				<span>{{ prediction.no_of_pregnancies }}</span>
+				<span>{{ prediction.number_of_pregnancies }}</span>
 			</p>
 			<p>
 				<span>Glucose:&nbsp;</span>
