--- a/main/templates/dashboard/prediction.html
+++ b/main/templates/dashboard/prediction.html
@@ -7,16 +7,104 @@
 <div class="row">
 	<div class="col-lg-12">
 		<h4>Diabetes detection result</h4>
-		<p class="text-danger">Outcome - With best accuracy of 87% it says you have {{ prediction.model1_prediction }} chances of having diabetes</p>
+		<p class="text-danger">Outcome - Logistic regression is saying taht you have {{ prediction.model1_prediction }} chances of
+			having diabetes</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+		<div class="card">
+			<div class="card-body p-3">
+				<div class="row">
+					<div class="col-8">
+						<div class="numbers">
+							<p class="text-sm mb-0 text-capitalize font-weight-bold">Logistic regression</p>
+							<h5 class="font-weight-bolder mb-0">
+								<span class="text-success text-sm font-weight-bolder">82%</span>
+							</h5>
+						</div>
+					</div>
+					<div class="col-4 text-end">
+						<div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+							<i class="ni ni-money-coins text-lg opacity-10" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+		<div class="card">
+			<div class="card-body p-3">
+				<div class="row">
+					<div class="col-8">
+						<div class="numbers">
+							<p class="text-sm mb-0 text-capitalize font-weight-bold">KNN</p>
+							<h5 class="font-weight-bolder mb-0">
+								<span class="text-danger text-sm font-weight-bolder">+77%</span>
+							</h5>
+						</div>
+					</div>
+					<div class="col-4 text-end">
+						<div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+							<i class="ni ni-world text-lg opacity-10" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+		<div class="card">
+			<div class="card-body p-3">
+				<div class="row">
+					<div class="col-8">
+						<div class="numbers">
+							<p class="text-sm mb-0 text-capitalize font-weight-bold">Random forest classifier</p>
+							<h5 class="font-weight-bolder mb-0">
+								<span class="text-danger text-sm font-weight-bolder">79%</span>
+							</h5>
+						</div>
+					</div>
+					<div class="col-4 text-end">
+						<div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+							<i class="ni ni-paper-diploma text-lg opacity-10" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="col-xl-3 col-sm-6">
+		<div class="card">
+			<div class="card-body p-3">
+				<div class="row">
+					<div class="col-8">
+						<div class="numbers">
+							<p class="text-sm mb-0 text-capitalize font-weight-bold">SVM</p>
+							<h5 class="font-weight-bolder mb-0">
+								<span class="text-danger text-sm font-weight-bolder">+81%</span>
+							</h5>
+						</div>
+					</div>
+					<div class="col-4 text-end">
+						<div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+							<i class="ni ni-cart text-lg opacity-10" aria-hidden="true"></i>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 <div class="row mt-5">
-	<!-- <div class="col-lg-6">
+	<div class="col-lg-6">
 		<div class="card p-3">
 			<h5 class="text-success">Best model</h5>
-			<p class="text-success">Model1 is giving us best results with 87% of accuracy</p>
+			<p class="text-success">Logistic regression is giving us best results with 82% of accuracy</p>
+			<img src="{% static '/img/home/graph.png' %}"/>
 		</div>
-	</div> -->
+	</div>
 	<div class="col-lg-6">
 		<div class="card p-3">
 			<h5>Your inputs</h5>
